[gd_scene load_steps=11 format=3 uid="uid://deybleypjtymh"]

[ext_resource type="Script" path="res://scripts/goomba.gd" id="1_42s7q"]
[ext_resource type="Texture2D" uid="uid://cof2e8wmch2u4" path="res://assets/Enemies/goomba.png" id="1_jti7y"]
[ext_resource type="Texture2D" uid="uid://c7y0pu1mwwmws" path="res://assets/Enemies/goomba_death.png" id="2_iphqh"]
[ext_resource type="Script" path="res://scripts/goomba_hitbox.gd" id="4_bcown"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8lykb"]
radius = 9.0

[sub_resource type="Animation" id="Animation_rrxwc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jti7y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fafd8"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_iphqh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ugua6"]
resource_name = "walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_jti7y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pax53"]
_data = {
"RESET": SubResource("Animation_rrxwc"),
"hurt": SubResource("Animation_fafd8"),
"walk": SubResource("Animation_ugua6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn1cb"]
size = Vector2(12, 3)

[node name="goomba" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_42s7q")

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(1.125, 1.16827)
texture = ExtResource("1_jti7y")
hframes = 2

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_8lykb")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pax53")
}
autoplay = "walk"
speed_scale = 0.5

[node name="wall_detector" type="RayCast2D" parent="."]
position = Vector2(0, -9)
target_position = Vector2(-10, 0)
collision_mask = 10

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 32
script = ExtResource("4_bcown")

[node name="collision1" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_dn1cb")

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="animation_started" from="anim" to="." method="_on_anim_animation_started"]
[connection signal="body_entered" from="hitbox" to="hitbox" method="_on_body_entered"]
